# kraken-hunter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-test.yml  check-kraken-rs-version-increment.yaml  kraken-rs-check-on-issue-push.yml  kraken-rs-check-on-pr.yml  kraken-rs-check-version-increment.yml  kraken-rs-publish-image.yml
kraken-rs/: Cargo.toml  Dockerfile  LICENSE
kraken-rs/src/: main.rs  req.rs
kraken-rs/src/resp/: mod.rs  ohlc.rs
src/: main.rs  req.rs  ticker.rs
src/resp/: ticker.rs
tools/: cargo-version-compare.sh
tools/aarch64-linux-gnu-compiler/: Dockerfile
tools/aarch64-linux-musl-compiler/: Dockerfile  config.toml
