[package]
name = "kraken-rs"
version = "0.1.0"
authors = ["Thomas Ball <thomas.ball@skybettingandgaming.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26.2"
anyhow = "1.0.38"
serde = "1.0.119"
serde_derive = "1.0.119"
serde_json = "1.0.61"

